--- a/client/src/components/Navigation/Navigation.module.scss
+++ b/client/src/components/Navigation/Navigation.module.scss
@@ -5,8 +5,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    z-index: 100;
+    width: 100%;
     background-color: white;
+    box-shadow: 0px 0px 8px 2px rgba(#000000, 0.2);
     
     display: flex;
     align-items: center;
